Fix table in dark mode

--- a/_sass/_dark-mode.scss
+++ b/_sass/_dark-mode.scss
@@ -32,4 +32,14 @@
   .navbar-light .navbar-brand {
     color: rgba($text-color, 0.9);
   }
+
+  .table {
+    color: $text-color;
+
+    td,
+    th,
+    thead th {
+      border-color: $gray-600;
+    }
+  }
 }
